--- a/src/client/components/Navbar/Navbar.module.scss
+++ b/src/client/components/Navbar/Navbar.module.scss
@@ -1,5 +1,7 @@
 @import '../../styles/mixins/fonts/open-sans';
-@import '../../styles/mixins/media/media';
+@import '../../styles/mixins/media/screen';
+@import '../../styles/mixins/media/preferences';
+@import '../../styles/mixins/styles/focus';
 @import '../../styles/colors';
 
 // ----------------
@@ -27,7 +29,6 @@ $local--hamburger--line-height: 4px;
   // Style
   // ------
   background-color: transparent;
-  transition: ease-out background-color $local--animation-duration;
   width: 100%;
   height: var(--navbar-height);
   position: fixed;
@@ -36,6 +37,9 @@ $local--hamburger--line-height: 4px;
   align-items: center;
   padding: $local--padding;
   z-index: 10;
+  @include use-motion {
+    transition: ease-out background-color $local--animation-duration;
+  }
 
   // Statusbar
   &:before {
@@ -48,7 +52,9 @@ $local--hamburger--line-height: 4px;
     right: 0;
     background: linear-gradient(0deg, rgba(240, 0, 0, 0), rgba(240, 0, 0, 0.3));
     opacity: 0;
-    transition: ease-out opacity $local--animation-duration;
+    @include use-motion {
+      transition: ease-out opacity $local--animation-duration;
+    }
   }
 }
 .navbarSticky {
@@ -61,6 +67,7 @@ $local--hamburger--line-height: 4px;
   }
 }
 .navbarLogo {
+  @include accessible-focus();
   height: var(--navbar-height);
   width: calc(var(--navbar-height) * (64 / 44));
   background: url('../../../assets/vector/logo.svg') no-repeat center center;
@@ -71,56 +78,21 @@ $local--hamburger--line-height: 4px;
 .navbarLogoText {
   font-size: 0;
 }
+// ----------
+// Hamburger
+// ----------
 .navbarHamburger {
   position: fixed;
-  z-index: 10;
-  right: $local--padding;
-  height: var(--navbar-height);
-  width: var(--navbar-height);
-  padding: $local--padding / 2;
-  display: flex;
-  justify-content: space-around;
-  flex-direction: column;
-  align-items: stretch;
-  background: none;
-  border: none;
-  cursor: pointer;
-  @include local--large-screen {
-    display: none;
-  }
+  right: 1rem;
+  top: 1rem;
+  height: 4rem;
+  width: 4rem;
+  z-index: 15;
 }
-.navbarHamburgerLine {
-  height: $local--hamburger--line-height;
-  border-radius: $local--hamburger--line-height;
-  background-color: var(--color-text);
-  transition: background-color $local--animation-duration ease-in-out;
-  display: block;
-
-  // Animate opening and closing
-  &:first-child,
-  &:last-child {
-    transform: rotate(0deg) translateY(0) translateX(0);
-    transition: transform $local--animation-duration ease-in-out;
-  }
-  &:not(:first-child):not(:last-child) {
-    transform: rotateY(0deg);
-    transition: transform $local--animation-duration ease-in-out;
-  }
-}
-.navbarHamburgerLineExpanded {
-  $local--hamburger-line-rotation-offset: calc((var(--navbar-height) - #{$local--padding}) * 1 / 3);
-  &:first-child {
-    transform: translate3d(0, $local--hamburger-line-rotation-offset, 0) rotate(45deg);
-  }
-  &:not(:first-child):not(:last-child) {
-    transform: rotateY(90deg);
-  }
-  &:last-child {
-    transform: translate3d(0, calc(#{$local--hamburger-line-rotation-offset} * -1), 0)
-      rotate(-45deg);
-  }
-}
-.navbarList {
+// ---------------
+// Navbar content
+// ---------------
+.navbarContent {
   position: fixed;
   top: 0;
   left: 0;
@@ -131,7 +103,9 @@ $local--hamburger--line-height: 4px;
   padding: calc(var(--navbar-height) * 2) 0 0 0;
   background-color: var(--color-background);
   transform: translateX(0);
-  transition: transform $local--animation-duration ease-in-out;
+  @include use-motion {
+    transition: transform $local--animation-duration ease-in-out;
+  }
   @include local--large-screen {
     position: relative;
     padding: 0;
@@ -141,13 +115,20 @@ $local--hamburger--line-height: 4px;
     width: initial;
   }
 }
-.navbarListExpanded {
+.navbarContentExpanded {
   transform: translateX(-100%);
   @include local--large-screen {
     transform: none;
   }
 }
-.navbarListContent {
+// Used for removing element from screen readers and tabindex after transitions
+.navbarContentHidden {
+  visibility: hidden;
+  @include local--large-screen {
+    visibility: initial;
+  }
+}
+.navbarList {
   margin: 0;
   padding: 0;
   text-align: center;
